# Tria

./: .env.example  .gitignore  CLAUDE.md  README.md  app.json  package-lock.json  package.json
.github/workflows/: pr.yml
.husky/: pre-push
app/: +not-found.tsx  _layout.tsx
app/(auth)/: _layout.tsx  callback.tsx  forgot-password.tsx  reset-password.tsx  sign-in.tsx  sign-up.tsx
app/(tabs)/: _layout.tsx  index.tsx  plan.tsx  settings.tsx
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py  llm.py  security.py  settings.py
backend/app/data/: workout_library.json
backend/app/domain/: models.py  types.py
backend/app/modules/plan_intake_agent/: api.py  constants.py  graph.py  nodes.py  schemas.py  state.py  test_ui.py  tools.py
backend/app/modules/programmer/: guardrails.py  repository.py  router.py  schemas.py
backend/app/modules/programmer/plan_generator/: dev.ipynb
backend/app/modules/programmer/workflow/: generate_plan_skeleton.py  generate_workouts.py
backend/app/schemas/: plan_eligibility.py
mobile/: README.md  app.json  package-lock.json  package.json  theme.ts
mobile/app/: _layout.tsx  index.tsx
mobile/components/: PrimaryButton.tsx  WeekCard.tsx  WizardHeader.tsx  WorkoutListItem.tsx
mobile/constants/: appConstants.tsx
mobile/context/: UserContext.tsx  WizardContext.tsx
mobile/data/: auth.ts  plan.ts
mobile/lib/: supabase.ts
mobile/theme/: dark.ts  index.ts  light.ts  types.d.ts
mobile/utils/: helpers.tsx
supabase/: config.toml  seed.sql
types/: database.ts
(+110 files in other folders)
