[tool.poetry]
name = "tria-backend"
version = "0.1.0"
description = ""
authors = ["NathanMerrett <merrettn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
supabase = "^2.17.0"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
